# point-of-sales

./: manage.py  pyproject.toml
employee/: admin.py  models.py  serializers.py  urls.py  views.py
employee/migrations/: 0001_initial.py  0002_employer.py  0003_delete_employer_alter_product_options.py  0004_product_user.py  0005_alter_product_id.py  0006_remove_product_user.py  0007_product_user.py  0008_customer.py  0009_rename_name_customer_customer_name_and_more.py  0010_bill_billdetail.py
point_of_sale_billing/: asgi.py  settings.py  urls.py  wsgi.py
